added a test button to show a notification

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Boot Counter</string>
+    <string name="trigger_test_notification">Trigger test notification</string>
 </resources>
